fix link on firefox

--- a/cuisine_entre_amis/static/css/site.css
+++ b/cuisine_entre_amis/static/css/site.css
@@ -5274,7 +5274,10 @@ main {
   margin-bottom: 200px;
   margin-left: 450px;
   margin-top: -35px; }
-
+@-moz-document url-prefix() {
+  .contact-form .pull-right {
+    margin-left: 550px;
+    margin-top: -40px; } }
 .article {
   width: 100%; }
 .article .left {
