--- a/sass/css/_contact.scss
+++ b/sass/css/_contact.scss
@@ -7,16 +7,23 @@ main {
 
   .submit{
     @media(min-width:751px) {
-      margin-top:                   40px;
+      margin-top:               40px;
     }
-    background-color:             $brand-primary;
-    color:                        $white;
+    background-color:           $brand-primary;
+    color:                      $white;
   }
 
   .pull-right {
-      float:                      none !important;
-      margin-bottom:              200px;
-      margin-left:                450px;
-      margin-top:                 -35px;
+    float:                      none !important;
+    margin-bottom:              200px;
+    margin-left:                450px;
+    margin-top:                 -35px;
+  }
+  
+  @-moz-document url-prefix() {
+    .pull-right {
+      margin-left:              550px;         
+      margin-top:               -40px;
     }
+  }
 }
